--- a/axelor-gst/src/main/resources/views/Menu.xml
+++ b/axelor-gst/src/main/resources/views/Menu.xml
@@ -104,7 +104,7 @@
 	<action-view name="gst.root.nvoice.draft.invoice" title="Draft Invoices"
 		model="com.axelor.apps.account.db.Invoice">
 		<view type="grid" name="invoice-grid" />
-		<view type="form" name="invoice-form" />
+		<view type="form" name="gst-invoice-form" />
 		<view type="kanban" name="invoice-kanban" />
 		<domain>self.statusSelect = 1</domain>
 		<context name="json-enhance" expr="true" />
@@ -117,7 +117,7 @@
 	<action-view name="gst.root.invoice.validated.invoice"
 		title="Validated Invoices" model="com.axelor.apps.account.db.Invoice">
 		<view type="grid" name="invoice-grid" />
-		<view type="form" name="invoice-form" />
+		<view type="form" name="gst-invoice-form" />
 		<view type="kanban" name="invoice-kanban" />
 		<domain>self.statusSelect = 2</domain>
 		<context name="json-enhance" expr="true" />
@@ -129,7 +129,7 @@
 	<action-view name="gst.root.invoice.paid.invoice" title="Paid Invoices"
 		model="com.axelor.apps.account.db.Invoice">
 		<view type="grid" name="invoice-grid" />
-		<view type="form" name="invoice-form" />
+		<view type="form" name="gst-invoice-form" />
 		<view type="kanban" name="invoice-kanban" />
 		<domain>self.statusSelect = 3</domain>
 		<context name="json-enhance" expr="true" />
@@ -142,7 +142,7 @@
 	<action-view name="gst.root.invoice.cancelled.invoice"
 		title="Cancelled Invoices" model="com.axelor.apps.account.db.Invoice">
 		<view type="grid" name="invoice-grid" />
-		<view type="form" name="invoice-form" />
+		<view type="form" name="gst-invoice-form" />
 		<view type="kanban" name="invoice-kanban" />
 		<domain>self.statusSelect = 4</domain>
 		<context name="json-enhance" expr="true" />
