--- a/axelor-gst/src/main/resources/views/Invoice.xml
+++ b/axelor-gst/src/main/resources/views/Invoice.xml
@@ -3,15 +3,11 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://axelor.com/xml/ns/object-views http://axelor.com/xml/ns/object-views/object-views_5.0.xsd">
 
-	<form name="gst-invoice-form" title="Invoice"
+	<form name="invoice-form" title="Invoice" id="invoice-form-gst"
 		model="com.axelor.apps.account.db.Invoice"
-		onNew="action-account-invoice-onnew-group,action-gst-invoice-onnew-group"
+		onNew="action-account-invoice-onnew-group,action-group-gst-invoice-onnew-group"
 		onLoad="action-account-invoice-onload-group">
 
-		<toolbar>
-			<button name="btnPrintInvoice" title="Print" icon="fa-print"
-				onClick="get-image-path,print-invoice" showIf="id &amp;&amp; __config__.app.isApp('gst')" />
-		</toolbar>
 		<menubar>
 			<menu title="Reports" icon="fa-files-o" showTitle="true">
 				<item title="Print" action="save,action-invoice-method-show-invoice"
@@ -28,6 +24,8 @@
 					action="action-invoice-business-project-method-print-annex"
 					showIf="partner != null &amp;&amp; (displayTimesheetOnPrinting || displayExpenseOnPrinting)"
 					if-module="axelor-business-project" />
+				<item action="get-image-path,print-invoice" title="Print Invoice(GST)"
+					showIf="id &amp;&amp; __config__.app.isApp('gst')" />
 			</menu>
 
 			<menu title="Tools" icon="fa-wrench" showTitle="true">
@@ -35,7 +33,6 @@
 					readonlyIf="partner == null" />
 			</menu>
 		</menubar>
-
 		<panel>
 			<field name="printedPDF" hidden="true" /><!-- Needed to be able 
 				to use it in menu -->
@@ -64,7 +61,7 @@
                             <span class="label label-info" style="margin: 5px 0 !important; display: inline-table; line-height: initial;" x-translate ng-show="record.operationSubTypeSelect == 6 && (record.operationTypeSelect == 1 || record.operationTypeSelect == 3)">Subscription</span>
                         </h4>
                     ]]>
-                </viewer>
+			</viewer>
 			</field>
 
 			<field name="invoiceId" colSpan="12" css="label-bold bold large"
@@ -73,7 +70,7 @@
                     <![CDATA[
                         <span ng-show="(record.operationSubTypeSelect != 2 && record.statusSelect &lt; 3) || (record.operationSubTypeSelect == 2 && record.statusSelect == 0)" x-translate>Proforma</span> <span>{{record.invoiceId}}</span>
                     ]]>
-                </viewer>
+			</viewer>
 			</field>
 
 			<panel colSpan="6" itemSpan="12">
@@ -90,7 +87,8 @@
 				hideIf="statusSelect &gt; 1 || (operationTypeSelect != 1 &amp;&amp; operationTypeSelect != 3) || $readonly()"
 				showTitle="true" />
 			<field name="company" canEdit="false"
-				readonlyIf="statusSelect != 1 || partner != null" onChange="action-group-account-invoice-company-onchange"
+				readonlyIf="statusSelect != 1 || partner != null"
+				onChange="action-group-account-invoice-company-onchange,action-group-gst-invoice-company-partner-onchange"
 				form-view="company-form" grid-view="company-grid" />
 			<field name="tradingName" canEdit="false" grid-view="trading-name-grid"
 				form-view="trading-name-form"
@@ -116,9 +114,8 @@
 		</panel>
 
 		<panel title="Invoicing informations" hideIf="company == null">
-			<field name="partner"
-				readonlyIf="statusSelect != 1 || invoiceLineList.length > 0 &amp;&amp; __config__.app.isApp('gst')"
-				onChange="action-group-account-invoice-partner-onchange,action-method-invoice-address-str,set-invoice-line-attrs,calculate-invoice"
+			<field name="partner" readonlyIf="statusSelect != 1 || invoiceLineList.length > 0"
+				onChange="action-group-account-invoice-partner-onchange,action-method-invoice-address-str,action-group-gst-invoice-company-partner-onchange"
 				onSelect="action-set-partner-domain" form-view="partner-form"
 				grid-view="partner-grid" />
 			<field name="contactPartner" onSelect="action-set-partner-domain"
@@ -127,17 +124,16 @@
 			<panel stacked="true">
 				<field name="address" hideIf="$readonly() || statusSelect &gt; 1"
 					onSelect="action-invoice-attrs-domain-address" onChange="action-method-invoice-address-str"
-					canEdit="false" canNew="true" form-view="gst-address-form"
+					canEdit="false" canNew="true" form-view="address-partner-address-form"
 					grid-view="address-grid" />
 				<field name="addressStr" readonlyIf="statusSelect &gt; 1"
-					height="5" if="!(__config__.app.isApp('gst'))">
+					height="5">
 					<viewer>{{record.addressStr}}</viewer>
 				</field>
 				<field name="useInvoiceAddressAsShippingAddress" if="__config__.app.isApp('gst')"
 					onChange="invoice-partner-data" />
 				<field name="shippingAddress" colSpan="12" canNew="true"
 					showIf="!useInvoiceAddressAsShippingAddress" if="__config__.app.isApp('gst')" />
-
 			</panel>
 			<field name="paymentMode" widget="SuggestBox"
 				onSelect="action-set-payment-mode-domain" onChange="action-invoice-method-fill-company-bank-details"
@@ -168,21 +164,15 @@
 			<field name="subscriptionToDate" />
 		</panel>
 
-		<panel-tabs hideIf="false">
+		<panel-tabs hideIf="partner == null">
 			<panel name="invoiceContent" title="Invoice content" showTitle="false">
 				<panel-related field="invoiceLineList" canNew="statusSelect == 1"
 					canRemove="statusSelect == 1" readonlyIf="statusSelect == 3 || partner == null"
-					colSpan="12" form-view="gst-invoice-line-form" grid-view="invoice-line-grid"
-					onChange="action-invoice-method-compute,calculate-invoice" canMove="true"
-					orderBy="sequence" />
+					colSpan="12" form-view="invoice-line-form" grid-view="invoice-line-grid"
+					onChange="action-invoice-method-compute,action-group-gst-invoice-invoiceline-change"
+					canMove="true" orderBy="sequence" />
 				<panel-related field="invoiceLineTaxList" colSpan="12"
 					form-view="invoice-line-tax-form" grid-view="invoice-line-tax-grid" />
-
-				<panel colSpan="12" title="Gst" css="panel-brown">
-					<field name="netIgst" colSpan="12" />
-					<field name="netSgst" colSpan="12" />
-					<field name="netCgst" colSpan="12" />
-				</panel>
 			</panel>
 			<panel name="accounting" title="Accounting" showTitle="false">
 				<panel name="accountingDetails" title="Accounting details"
@@ -299,7 +289,6 @@
 				<field name="displayExpenseOnPrinting" if-module="axelor-business-project"
 					hidden="true" />
 			</panel>
-
 		</panel-tabs>
 
 		<panel hideIf="partner == null" sidebar="true">
@@ -365,7 +354,7 @@
 		           <dt class="order-subtotal-total" x-translate>Total A.T.I.</dt>
 		           <dd class="order-subtotal-total">{{record.inTaxTotal}} {{record.currency.symbol}}</dd>
 		         </dl>]]>
-				</viewer>
+			</viewer>
 			</field>
 			<field name="$paymentVouchersOnInvoice" type="boolean" hidden="true" />
 			<field name="invoicePaymentList" showTitle="false" readonly="true"
@@ -390,7 +379,7 @@
                    	</dl>
                   </span>
                 ]]>
-              </viewer>
+			</viewer>
 				<editor></editor>
 			</field>
 			<field name="inTaxTotal" css="order-subtotal" showTitle="false"
@@ -400,7 +389,7 @@
 		           <dt class="order-subtotal-total" x-translate>Amount due</dt>
 		           <dd class="order-subtotal-total">{{record.amountRemaining}} {{record.currency.symbol}}</dd>
 		         </dl>]]>
-				</viewer>
+			</viewer>
 			</field>
 		</panel>
 		<panel name="totalsCompanyCurrency" title="Totals company currency"
@@ -427,14 +416,17 @@
 			</field>
 		</panel>
 
+		<panel sidebar="true" itemSpan="6">
+			<field name="netIgst" />
+			<field name="netSgst" />
+			<field name="netCgst" />
+		</panel>
+
 		<panel-mail>
 			<mail-messages limit="4" />
 			<mail-followers />
 		</panel-mail>
 	</form>
-
-
-
 
 
 	<kanban name="invoice-kanban" sequenceBy="priority"
@@ -455,10 +447,19 @@
     ]]></template>
 	</kanban>
 
-	<action-group name="action-gst-invoice-onnew-group">
-		<action name="set-invoice-line-list" />
-		<action name="set-invoice-line-attrs" />
-		<action name="calculate-invoice" />
+	<action-group name="action-group-gst-invoice-onnew-group">
+		<action name="set-invoice-line-list" if="__config__.app.isApp('gst')" />
+		<action name="set-invoice-line-attrs" if="__config__.app.isApp('gst')" />
+		<action name="calculate-invoice" if="__config__.app.isApp('gst')" />
+	</action-group>
+
+	<action-group name="action-group-gst-invoice-company-partner-onchange">
+		<action name="set-invoice-line-attrs" if="__config__.app.isApp('gst')" />
+		<action name="calculate-invoice" if="__config__.app.isApp('gst')" />
+	</action-group>
+
+	<action-group name="action-group-gst-invoice-invoiceline-change">
+		<action name="calculate-invoice" if="__config__.app.isApp('gst')" />
 	</action-group>
 
 	<action-method name="set-invoice-line-list">
